--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -19,19 +20,24 @@
     </div>
   </div>
   <div class="sidebar">
-    <div class="menu">
+    <div id="menu">
       <ul>
         <li><a href="index.html">HOME</a></li>
-        <li><a href="portfolio.html">PORTFOLIO</a></li>
+        <li><a href="">PORTFOLIO</a>
+          <ul class="submenu">
+            <li><a href="portfolio/1.html">POPRONDE UTRECHT</a></li>
+            <li><a href="">DAVID ROOKER</a></li>
+            <li><a href="">JAPAN</a></li>
+          </ul>
+        </li>
         <li><a href="about.html">ABOUT</a></li>
         <li><a href="contact.html">CONTACT</a></li>
       </ul>
     </div>
+    <div class="socials">
+      <a href="https://instagram.com/morgaine.p">Instagram</a></li>
+    </div>
   </div>
-
-
-
 </body>
-
 
 </html>
