--- a/portfolio/1.html
+++ b/portfolio/1.html
@@ -2,29 +2,14 @@
 <html>
 <head>
   <title>The Portfolio Website of Morgaine</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
-  <div class="sidebar">
-    <div id="menu">
-      <ul>
-        <li><a href="index.html">HOME</a></li>
-        <li><a href="portfolio.html">PORTFOLIO</a>
-          <ul class="submenu">
-            <li><a href="">POPRONDE UTRECHT</a></li>
-            <li><a href="">DAVID ROOKER</a></li>
-            <li><a href="">JAPAN 2019</a></li>
-          </ul>
-        </li>
-        <li><a href="about.html">ABOUT</a></li>
-        <li><a href="contact.html">CONTACT</a></li>
-      </ul>
-    </div>
-  </div>
   <div class="wrap">
     <div class="header">
       MORGAINE
@@ -32,9 +17,25 @@
     <div id="carousel">
     </div>
   </div>
-
-
+  <div class="sidebar">
+    <div id="menu">
+      <ul>
+        <li><a href="../index.html">HOME</a></li>
+        <li><a href="">PORTFOLIO</a>
+          <ul class="submenu">
+            <li><a href="">POPRONDE UTRECHT</a></li>
+            <li><a href="">DAVID ROOKER</a></li>
+            <li><a href="">JAPAN</a></li>
+          </ul>
+        </li>
+        <li><a href="../about.html">ABOUT</a></li>
+        <li><a href="../contact.html">CONTACT</a></li>
+      </ul>
+    </div>
+    <div class="socials">
+      <a href="https://instagram.com/morgaine.p">Instagram</a></li>
+    </div>
+  </div>
 </body>
-
 
 </html>
