--- a/contact.html
+++ b/contact.html
@@ -5,12 +5,12 @@
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <div class="sidebar">
-    <div class="menu">
+    <div id="menu">
       <ul>
         <li><a href="index.html">HOME</a></li>
         <li><a href="portfolio.html">PORTFOLIO</a></li>
@@ -23,7 +23,8 @@
     <div class="header">
       MORGAINE
     </div>
-    <div id="carousel">
+    <div class="infobox">
+      You can mail me at: morgaine@prasetya.eu
     </div>
   </div>
 
