--- a/contact.html
+++ b/contact.html
@@ -6,19 +6,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
+  <script type="module" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.esm.js"></script>
 </head>
 
 <body>
-  <div class="sidebar">
-    <div id="menu">
-      <ul>
-        <li><a href="index.html">HOME</a></li>
-        <li><a href="portfolio.html">PORTFOLIO</a></li>
-        <li><a href="about.html">ABOUT</a></li>
-        <li><a href="contact.html">CONTACT</a></li>
-      </ul>
-    </div>
-  </div>
   <div class="wrap">
     <div class="header">
       MORGAINE
@@ -27,8 +19,8 @@
       You can mail me at: morgaine@prasetya.eu
     </div>
   </div>
-
-
+  <script src="layout-type.js">
+  </script>
 </body>
 
 
