--- a/portfolio.html
+++ b/portfolio.html
@@ -6,25 +6,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
+  <script type="module" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.esm.js"></script>
 </head>
 
 <body>
-  <div class="sidebar">
-    <div id="menu">
-      <ul>
-        <li><a href="index.html">HOME</a></li>
-        <li><a href="portfolio.html">PORTFOLIO</a>
-          <ul class="submenu">
-            <li><a href="">POPRONDE UTRECHT</a></li>
-            <li><a href="">DAVID ROOKER</a></li>
-            <li><a href="">JAPAN 2019</a></li>
-          </ul>
-        </li>
-        <li><a href="about.html">ABOUT</a></li>
-        <li><a href="contact.html">CONTACT</a></li>
-      </ul>
-    </div>
-  </div>
   <div class="wrap">
     <div class="header">
       MORGAINE
@@ -32,6 +18,8 @@
     <div id="carousel">
     </div>
   </div>
+  <script src="layout-type.js">
+  </script>
 
 
 </body>
