--- a/portfolio/1.html
+++ b/portfolio/1.html
@@ -6,7 +6,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
+  <script type="module" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.esm.js"></script>
 </head>
 
 <body>
@@ -17,25 +18,8 @@
     <div id="carousel">
     </div>
   </div>
-  <div class="sidebar">
-    <div id="menu">
-      <ul>
-        <li><a href="../index.html">HOME</a></li>
-        <li><a href="">PORTFOLIO</a>
-          <ul class="submenu">
-            <li><a href="">POPRONDE UTRECHT</a></li>
-            <li><a href="">DAVID ROOKER</a></li>
-            <li><a href="">JAPAN</a></li>
-          </ul>
-        </li>
-        <li><a href="../about.html">ABOUT</a></li>
-        <li><a href="../contact.html">CONTACT</a></li>
-      </ul>
-    </div>
-    <div class="socials">
-      <a href="https://instagram.com/morgaine.p">Instagram</a></li>
-    </div>
-  </div>
+  <script src="layout-type.js">
+  </script>
 </body>
 
 </html>
