portfolio pages added

--- a/about.html
+++ b/about.html
@@ -16,7 +16,12 @@
       MORGAINE
     </div>
     <div class="infobox">
-      Hello there! My name is Morgaine Prasetya.
+      <p>
+        Hello there! My name is Morgaine Prasetya.
+      </p>
+      <p>
+        This website was developed and designed by me!
+      </p>
     </div>
   </div>
   <script src="layout-type.js">
