--- a/david-rooker.html
+++ b/david-rooker.html
@@ -19,7 +19,7 @@
     </div>
     <div id="carousel">
       <script>
-        loadImages("home-images", 3)
+        loadImages("david-rooker-images", 8)
       </script>
     </div>
   </div>
