--- a/popronde-u.html
+++ b/popronde-u.html
@@ -2,12 +2,14 @@
 <html>
 <head>
   <title>The Portfolio Website of Morgaine</title>
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
   <script type="module" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.esm.js"></script>
+  <script src="slider.js"></script>
 </head>
 
 <body>
@@ -16,6 +18,9 @@
       MORGAINE
     </div>
     <div id="carousel">
+      <script>
+        loadImages("popronde-u-images", 8)
+      </script>
     </div>
   </div>
   <script src="layout-type.js">
