animations and cleanup

--- a/about.html
+++ b/about.html
@@ -11,17 +11,23 @@
 </head>
 
 <body>
+  <script>
+    document.body.style.overflow = "clip";
+  </script>
   <div class="wrap">
     <div class="header">
       MORGAINE
     </div>
-    <div class="infobox">
-      <p>
-        Hello there! My name is Morgaine Prasetya.
-      </p>
-      <p>
-        This website was developed and designed by me!
-      </p>
+    <div id="infobox">
+      <script src="load_animation.js"></script>
+      <div class="headerbox">
+        Hello there!
+      </div>
+      <div class = "infowrap">
+        My name is Morgaine Prasetya.
+        I am a Dutch photographer with a passion for music.
+        Take a look around my website to get an impression of my work.
+      </div>
     </div>
   </div>
   <script src="layout-type.js">
