--- a/contact.html
+++ b/contact.html
@@ -11,12 +11,20 @@
 </head>
 
 <body>
+  <script>
+    document.body.style.overflow = "clip";
+  </script>
   <div class="wrap">
     <div class="header">
       MORGAINE
     </div>
-    <div class="infobox">
-      You can mail me at: morgaine@prasetya.eu
+    <div id="infobox">
+      <script src="load_animation.js"></script>
+      <div class = infowrap>
+        <div class="mail">
+          You can mail me at: morgaine@prasetya.eu
+        </div>
+      </p>
     </div>
   </div>
   <script src="layout-type.js">
