Added resume page

--- a/about.html
+++ b/about.html
@@ -25,8 +25,8 @@
       </div>
       <div class = "infowrap">
         My name is Morgaine Prasetya.
-        I am a Dutch photographer with a passion for music.
-        Take a look around my website to get an impression of my work.
+        I am an Artificial Intelligence student and amateur photographer, based in Utrecht, with a passion for music.
+        Take a look around my website to get an impression of my photography work; I built this website myself, too!
       </div>
     </div>
   </div>
