--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,8 @@
       <script src="load_animation.js"></script>
       <div class = infowrap>
         <div class="mail">
-          You can mail me at: morgaine@prasetya.eu
+          <p>You can mail me at: morgaine@prasetya.eu</p>
+          <p>You can call me at: +31 6 30687109</p>
         </div>
       </p>
     </div>
