--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
     <div class="header">
       MORGAINE
     </div>
+    <div id="infobox">
+      <script src="load_animation.js"></script>
+      <div class="headerbox">
+        Hello there!
+      </div>
+      <div class = "infowrap">
+        My name is Morgaine Prasetya.
+        I am an Artificial Intelligence student and amateur photographer, based in Utrecht, with a passion for music.
+        Take a look around my website to get an impression of my photography work. 
+        Go to the resume page to view my curriculum vitae. I built this website myself, too!
+      </div>
+    </div>
     <div id="carousel">
       <script>
         loadImages("home-images", 3)
